Adding new endpoint for getting status. New version 2.0.0 was released
